# site

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  render.yaml  render_build_backend.sh  requirements.txt
backend/authentication/: serializers.py  signals.py  urls.py  views.py
backend/common/: models.py  serializers.py
backend/common/utils/: config.py  generators.py  media.py  sms_helper.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/home/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/home/migrations/: 0001_initial.py  0002_alter_booking_date.py  0003_alter_booking_date.py  0004_companyinfo_countries.py  0005_alter_booking_date.py  0006_remove_banneritem_menu_item_banneritem_description_and_more.py  0007_alter_booking_date.py  0008_alter_booking_date.py  0009_companyinfo_delivery_fee.py  0010_alter_booking_date.py  0011_alter_booking_date.py  0012_alter_booking_date.py  0013_alter_booking_date.py  0014_alter_booking_date.py  0015_alter_booking_date.py
backend/home/utils/: validators.py
backend/menu/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/menu/migrations/: 0001_initial.py  0002_menuitemtag_alter_menuitem_options_and_more.py  0003_alter_menuitem_code.py  (+4 more)
backend/shop/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
frontend/: document.txt  package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/context/: AppContext.tsx  AuthContext.tsx  CafeuContext.tsx  CheckoutContext.tsx  CheckoutWrapper.tsx  HomeContext.tsx  ShopContext.tsx
frontend/data/: Data.tsx
frontend/style/: main.css  responsive.css
frontend/types/: auth.ts  context.ts  form.ts  help.ts  home.ts  menu.ts
frontend/utils/: api-client.ts  checkout-helper.ts  shop-helper.ts
(+93 files in other folders)
